# academia-api/public/api/openapi.yaml
@@ -1,10 +1,7 @@
 openapi: '3.0.1'
 info:
   title: Academia
-  description: Este serviço implementa uma forma mais acessível para os usuários
-   conseguirem acessar suas atividades, é uma aplicação em que o professor de educação física
-   vai escrever os treinos que o usuário irá fazer, possivelmente acompanhados de imagens ou vídeos.
-   Usuários podem ver,seguir, comentar sobre o que estão achando dos treinos.
+  description: Este serviço implementa uma forma mais acessível para os usuários conseguirem acessar suas atividades, é uma aplicação em que o professor de educação física vai escrever os treinos que o usuário irá fazer, possivelmente acompanhados de imagens ou vídeos. Usuários podem ver, seguir, comentar sobre o que estão achando dos treinos.
   version: '1.1'
 servers:
   - url: http://{host}:{porta}/api
@@ -28,7 +25,6 @@ paths:
                 items:
                   $ref: '#/components/schemas/user'
 
-
   /user/{id}:
     parameters:
       - name: id
@@ -36,8 +32,6 @@ paths:
         required: true
         schema:
           type: integer
-
-
     get:
       operationId: getUser
       summary: Obter usuário por ID
@@ -50,8 +44,19 @@ paths:
                 $ref: '#/components/schemas/user'
         '404':
           description: Usuário não encontrado.
-
-
+  /user/create:
+    post:
+      summary: Criar user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/user'
+      responses:
+        '201':
+          description: user criado
+  /user/edit/{id}:
     put:
       summary: Atualizar usuário
       requestBody:
@@ -62,23 +67,17 @@ paths:
               $ref: '#/components/schemas/user'
       responses:
         '200':
-          description: Usuário atualizado
+          description: Usuário editado
         '404':
           description: Usuário não encontrado.
-
-
+  /user/delete/{id}:
     delete:
       summary: Excluir usuário
       responses:
         '200':
-          description: Usuário excluído
+          description: Usuário deletado
         '404':
           description: Usuário não encontrado.
-
-
-
-
-
 
   /alunos:
     get:
@@ -116,8 +115,7 @@ paths:
                 $ref: '#/components/schemas/aluno'
         '404':
           description: Aluno não encontrado.
-
-
+  /aluno/create:
     post:
       summary: Criar aluno
       requestBody:
@@ -129,8 +127,7 @@ paths:
       responses:
         '201':
           description: Aluno criado
-
-
+  /aluno/edit/{id}:
     put:
       summary: Atualizar aluno
       requestBody:
@@ -144,8 +141,7 @@ paths:
           description: Aluno atualizado
         '404':
           description: Aluno não encontrado.
-
-
+  /aluno/delete/{id}:
     delete:
       summary: Excluir aluno
       responses:
@@ -191,8 +187,7 @@ paths:
                 $ref: '#/components/schemas/treino'
         '404':
           description: Treino não encontrado.
-
-
+  /treino/create:
     post:
       summary: Criar treino
       requestBody:
@@ -204,8 +199,7 @@ paths:
       responses:
         '201':
           description: Treino criado
-
-
+  /treino/edit/{id}:
     put:
       summary: Atualizar treino
       requestBody:
@@ -215,20 +209,18 @@ paths:
             schema:
               $ref: '#/components/schemas/treino'
       responses:
-        '200':
-          description: Treino atualizado
+        '201':
+          description: Treino editado
         '404':
-          description: Treino não encontrado.
-
-
+          description: Treino id não encontrado
+  /treino/delete/{id}:
     delete:
       summary: Excluir treino
       responses:
-        '200':
-          description: Treino excluído
+        '201':
+          description: Treino deletado
         '404':
-          description: Treino não encontrado.
-
+          description: Treino id não encontrada para delete
 
 components:
   schemas:
@@ -241,7 +233,10 @@ components:
           type: string
         email:
           type: string
-
+      example:
+        id: 1
+        name: "JL LP"
+        email: "jl@gmail.com"
 
     aluno:
       type: object
@@ -250,15 +245,41 @@ components:
           type: integer
         nome:
           type: string
-
+          maxLength: 45
+        idade:
+          type: integer
+        peso:
+          type: number
+          format: float
+        altura:
+          type: number
+          format: float
+        pago:
+          type: boolean
+      example:
+        id: 1
+        nome: "Mateus Silva"
+        idade: 25
+        peso: 65.5
+        altura: 1.75
+        pago: true
 
     treino:
       type: object
       properties:
         id:
           type: integer
-        descricao:
+        chest_day:
           type: string
-
-
-
+        leg_day:
+          type: string
+        back_day:
+          type: string
+        aluno_id:
+          type: integer
+      example:
+        id: 1
+        chest_day: "Treino de Peito"
+        leg_day: "Treino de Perna"
+        back_day: "Treino de Costa"
+        aluno_id: 1
